ws/static/css/layout.css
body {
  padding-top: 50px;
}

.main-content {
  margin-top: 20px;
}

.nowrap {
  white-space: nowrap;
}

/* Sticky footer styles */
html {
  position: relative;
  min-height: 100%;
}
body {
  margin-bottom: 55px !important; /* Bootstrap override, used for footer*/
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 15px 0px 10px;
  height: 55px; /* 30px for row + 25px for padding. Must match body margin-bottom. */
}

footer .btn {
  padding: 0px;
}

footer a {
  color: #777;
}

/* Override Bootstrap styling for more consistent appearance */
leader-select.form-control {
  display: inline-block; /* Stops leaders from wrapping beyond block bounds */
  border: 0px;
  padding: 0px !important;
}
leader-select .ui-select-container {
  padding-left: 12px !important;
  padding-top: 5px !important;
  padding-bottom: 5px !important;
}

@media screen and (max-width:480px) {
  .table {
    border-collapse: separate;
    border-spacing: .5em .2em;
  }
  .table-cell {
    display:table-row;
  }

  .table-heading:after {
    content: "";
  }
}


/* Wrap participant emails for easy copying */
pre.participant-emails {
  white-space: pre-line;
}

/* Styles lifted from Djangular for rendering errors nicely */
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none !important;
}

form .ng-invalid-bound.ng-pristine,
form .ng-invalid-bound.ng-pristine .ui-select-container,
form .ng-invalid.ng-dirty,
form .ng-invalid.ng-dirty .ui-select-container {
  border-color: #e9322d;
}

.ui-select-container .invalid-leader {
  text-decoration: line-through;
}

form .ng-invalid-bound.ng-pristine:focus, form .ng-invalid.ng-dirty:focus {
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
}

ul.djng-form-errors, ul.djng-field-errors {
  list-style-type: none;
  margin: 5px 0 0 0;
  padding: 0;
}
ul.djng-form-errors li, ul.djng-field-errors li {
  color: #e9322d;
}
ul.djng-field-errors li.invalid:before {
  content: "\2716";
  margin-right: 10px;
}

/* Built-in Django 'required content' */
label.required:after,
.required > label:after {
  content: ' *';
}

/* UI-sortable */
.ui-sortable .list-group-item {
  cursor: move;
}

admin-trip-signups button {
  margin-left: 15px;
}


/* Profile page */
.profile-photo {
  position: relative;
  display: inline-block;
}
edit-profile-photo {
  position:absolute;
  bottom: 10px;
  right: 10px;
}

h4#car label {
  /* "Do you have a car?" is semantically a label, but don't want boldness. */
  font-weight: inherit;
}

/* Size the profile image down with decreasing screen size */
@media screen and (max-width:991px) {
  .profile-photo img {
    max-width: 150px;
    max-height: 150px;
  }
}
@media screen and (max-width:767px) {
  .profile-photo img {
    max-width: 100px;
    max-height: 100px;
  }
  .leader-titles h4 {
    font-size: 14px;
  }

  .account-dropdown img {
    display: none;
  }
  .account-dropdown:before {
    content: 'Account';
  }
}
.navbar-nav li img {
  margin-bottom: -5px;
  margin-top: -5px;
}




.chart .legend {
  fill: black;
  font: 14px sans-serif;
  text-anchor: start;
  font-size: 12px;
}

.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

